--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": ">=8.0.0",
     "lcobucci/jwt": "^4.2.1 || ^5.0",
+    "lcobucci/clock": "^3.0",
     "nesbot/carbon": "^2.0"
   },
   "autoload": {
